--- a/.env
+++ b/.env
@@ -21,10 +21,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.sina.com
+MAIL_PORT=25
+MAIL_USERNAME=xiangtingkeji@sina.com
+MAIL_PASSWORD=zh13275747670
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
