--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "overtrue/laravel-lang": "dev-master",
         "laravel/passport": "^1.0",
-        "caouecs/laravel-lang": "~3.0"
+        "caouecs/laravel-lang": "~3.0",
+        "jpgraph/jpgraph": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
